Test Task implementation version 0.0.0.1

--- a/src/WinForms.Classic/Forms/OrdersListForm.resx
+++ b/src/WinForms.Classic/Forms/OrdersListForm.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="OrdersInstantFeedbackView.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>97, 13</value>
-  </metadata>
   <assembly alias="DevExpress.Data.v20.1" name="DevExpress.Data.v20.1, Version=20.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
   <data name="btnNew.ImageOptions.SvgImage" type="DevExpress.Utils.Svg.SvgImage, DevExpress.Data.v20.1" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -149,7 +146,10 @@
         MTkgMjUsMjggMjgsMjUgMTksMTYgMjgsNyAiIGZpbGw9IiNEMjRDMkYiIC8+DQo8L3N2Zz4L
 </value>
   </data>
-  <metadata name="OrderBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>455, 13</value>
+  <metadata name="OrdersDetailsCollection.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>229, 16</value>
   </metadata>
+  <data name="OrdersDetailsCollection.DisplayableProperties" xml:space="preserve">
+    <value>This;Oid;ItemName;ItemPriceInStock;OrderDetail!;OrderDetail!Key;OrderDetail;ItemInStocks;OrderDetail.Order.OrderDate;OrderDetail.Order.OrderNum;OrderDetail.Order.OrderStatus;OrderDetail.Orders;OrderDetail.Order.OrderDate;OrderDetail.Order.OrderNum;OrderDetail.Order.OrderStatus</value>
+  </data>
 </root>
